--- a/app/src/main/res/layout/fragment_historialgastositem_list.xml
+++ b/app/src/main/res/layout/fragment_historialgastositem_list.xml
@@ -16,8 +16,8 @@
         android:layout_marginLeft="10dp" />
 
     <ListView android:id="@+id/historial_gastos_lista"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginLeft="10dp" />
 
 </LinearLayout>
