--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -1,53 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/historial_gastos_list_item"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:columnCount="2"
-    android:rowCount="2" >
+    android:orientation="vertical"
+    android:layout_marginBottom="5dp">
 
-    <TextView android:id="@+id/historial_gastos_lista_fecha"
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/abc_text_size_medium_material"
-        android:layout_column="0"
-        android:layout_row="0"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" />
+        android:layout_height="fill_parent"
+        android:orientation="horizontal">
 
-    <TextView android:id="@+id/historial_gastos_lista_importe"
+        <TextView android:id="@+id/historial_gastos_lista_categoria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:textColor="#ff000000" />
+
+        <TextView android:id="@+id/historial_gastos_lista_fecha"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="right"
+            android:layout_marginTop="5dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/abc_text_size_medium_material"
-        android:layout_column="1"
-        android:layout_row="0"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_gravity="right|top" />
+        android:layout_height="fill_parent"
+        android:orientation="horizontal" >
 
-    <TextView android:id="@+id/historial_gastos_lista_categoria"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/abc_text_size_medium_material"
-        android:layout_column="0"
-        android:layout_row="1"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="5dp" />
+        <TextView android:id="@+id/historial_gastos_lista_descripcion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:ellipsize="end"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:singleLine="true"
+            android:maxWidth="180dp" />
 
-    <TextView android:id="@+id/historial_gastos_lista_descripcion"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/abc_text_size_medium_material"
-        android:layout_column="1"
-        android:layout_row="1"
-        android:layout_marginBottom="5dp"
-        android:maxLines="1"
-        android:ellipsize="marquee"/>
+        <TextView android:id="@+id/historial_gastos_lista_importe"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="right"
+            android:layout_marginBottom="5dp"
+            android:textStyle="bold"
+            android:textColor="#ffff8100" />
 
-</GridLayout>
+    </LinearLayout>
+
+</LinearLayout>
 
