--- a/app/src/main/res/layout/fragment_acerca_de.xml
+++ b/app/src/main/res/layout/fragment_acerca_de.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/fragment_acerca_de_ll_main">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/imageView"
+        android:id="@+id/fragment_acerca_de_im_xpdroid"
         android:layout_weight="1"
         android:src="@drawable/ic_xpdroid_full"
         android:layout_gravity="center" />
@@ -15,20 +16,22 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:id="@+id/fragment_acerca_de_ll_creditos">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView2"
-            android:layout_gravity="center" />
+            android:id="@+id/fragment_acerca_de_im_funebunny"
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_bunny" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="funEBunny Apps"
-            android:id="@+id/textView2"
+            android:id="@+id/fragment_acerca_de_tv_creditos"
             android:gravity="center_vertical|center_horizontal" />
     </LinearLayout>
 </LinearLayout>
