--- a/app/src/main/res/layout/historial_gastos_header.xml
+++ b/app/src/main/res/layout/historial_gastos_header.xml
@@ -13,20 +13,36 @@
         android:id="@+id/historial_gastos_header_tv_margen"
         android:layout_weight="0.5" />
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/historial_gastos_header_tv_mes"
-        android:gravity="left|center_vertical"
-        android:layout_weight="2" />
+        android:layout_weight="2"
+        android:id="@+id/historial_gastos_header_ll_mes">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/historial_gastos_header_tv_mes"
+            android:gravity="left|center_vertical"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/historial_gastos_header_tv_anio"
+            android:layout_weight="1"
+            android:gravity="left|center_vertical" />
+    </LinearLayout>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/historial_gastos_header_tv_total"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:gravity="center_vertical|right"
         android:layout_marginRight="10dp"
         style="@style/XPDroidTextViewImporte"
