--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -48,7 +48,8 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:id="@+id/fragment_totales_rl"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:visibility="gone">
     </RelativeLayout>
 
     <ExpandableListView
