--- a/app/src/main/res/layout/alerta_presupuesto_item.xml
+++ b/app/src/main/res/layout/alerta_presupuesto_item.xml
@@ -8,5 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/alerta_presupuesto_item_tv_detalle" />
+        android:id="@+id/alerta_presupuesto_item_tv_detalle"
+        android:textStyle="bold"
+        android:gravity="center_vertical|center|center_horizontal" />
 </LinearLayout>
